--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,23 @@ services:
     networks:
       - backend
 
+# Rabbit MQ
+  rabbitmq:
+    image: rabbitmq:3.8-management-alpine
+    container_name: 'rabbitmq'
+    restart: unless-stopped
+    environment:
+      - RABBITMQ_DEFAULT_USER=rabbit
+      - RABBITMQ_DEFAULT_PASS=rabbit
+    ports:
+      - 0.0.0.0:5672:5672
+      - 0.0.0.0:15672:15672
+    volumes:
+      - ./vol-rabbitmq/data/:/var/lib/rabbitmq/
+      - ./vol-rabbitmq/log/:/var/log/rabbitmq/
+    networks:
+        - backend       
+
 # Redis      
   redis:
     image: "redis:latest"
